src/test/ui/traits/negative-impls/negated-auto-traits-error.stderr
error[E0277]: `dummy::TestType` cannot be sent between threads safely
  --> $DIR/negated-auto-traits-error.rs:23:11
   |
LL |     Outer(TestType);
   |     ----- ^^^^^^^^ `dummy::TestType` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Send` is not implemented for `dummy::TestType`
note: required by `Outer`
  --> $DIR/negated-auto-traits-error.rs:10:1
   |
LL | struct Outer<T: Send>(T);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `dummy::TestType` cannot be sent between threads safely
  --> $DIR/negated-auto-traits-error.rs:23:5
   |
LL |     Outer(TestType);
   |     ^^^^^^^^^^^^^^^ `dummy::TestType` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `dummy::TestType`
note: required by a bound in `Outer`
  --> $DIR/negated-auto-traits-error.rs:10:17
   |
LL | struct Outer<T: Send>(T);
   |                 ^^^^ required by this bound in `Outer`

error[E0277]: `dummy1b::TestType` cannot be sent between threads safely
  --> $DIR/negated-auto-traits-error.rs:32:13
   |
LL |     is_send(TestType);
   |     ------- ^^^^^^^^ `dummy1b::TestType` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Send` is not implemented for `dummy1b::TestType`
note: required by a bound in `is_send`
  --> $DIR/negated-auto-traits-error.rs:16:15
   |
LL | fn is_send<T: Send>(_: T) {}
   |               ^^^^ required by this bound in `is_send`

error[E0277]: `dummy1c::TestType` cannot be sent between threads safely
  --> $DIR/negated-auto-traits-error.rs:40:13
   |
LL |     is_send((8, TestType));
   |     ------- ^^^^^^^^^^^^^ `dummy1c::TestType` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `({integer}, dummy1c::TestType)`, the trait `Send` is not implemented for `dummy1c::TestType`
   = note: required because it appears within the type `({integer}, dummy1c::TestType)`
note: required by a bound in `is_send`
  --> $DIR/negated-auto-traits-error.rs:16:15
   |
LL | fn is_send<T: Send>(_: T) {}
   |               ^^^^ required by this bound in `is_send`

error[E0277]: `dummy2::TestType` cannot be sent between threads safely
  --> $DIR/negated-auto-traits-error.rs:48:13
   |
LL |     is_send(Box::new(TestType));
   |     ------- ^^^^^^^^^^^^^^^^^^ expected an implementor of trait `Send`
   |     |
   |     required by a bound introduced by this call
   |
   = note: the trait bound `dummy2::TestType: Send` is not satisfied
   = note: required because of the requirements on the impl of `Send` for `Unique<dummy2::TestType>`
   = note: required because it appears within the type `Box<dummy2::TestType>`
note: required by a bound in `is_send`
  --> $DIR/negated-auto-traits-error.rs:16:15
   |
LL | fn is_send<T: Send>(_: T) {}
   |               ^^^^ required by this bound in `is_send`
help: consider borrowing here
   |
LL |     is_send(&Box::new(TestType));
   |             +

error[E0277]: `dummy3::TestType` cannot be sent between threads safely
  --> $DIR/negated-auto-traits-error.rs:56:13
   |
LL |     is_send(Box::new(Outer2(TestType)));
   |     ------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ `dummy3::TestType` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Outer2<dummy3::TestType>`, the trait `Send` is not implemented for `dummy3::TestType`
note: required because it appears within the type `Outer2<dummy3::TestType>`
  --> $DIR/negated-auto-traits-error.rs:12:8
   |
LL | struct Outer2<T>(T);
   |        ^^^^^^
   = note: required because of the requirements on the impl of `Send` for `Unique<Outer2<dummy3::TestType>>`
   = note: required because it appears within the type `Box<Outer2<dummy3::TestType>>`
note: required by a bound in `is_send`
  --> $DIR/negated-auto-traits-error.rs:16:15
   |
LL | fn is_send<T: Send>(_: T) {}
   |               ^^^^ required by this bound in `is_send`

error[E0277]: `main::TestType` cannot be sent between threads safely
  --> $DIR/negated-auto-traits-error.rs:66:13
   |
LL |     is_sync(Outer2(TestType));
   |     ------- ^^^^^^^^^^^^^^^^ expected an implementor of trait `Sync`
   |     |
   |     required by a bound introduced by this call
   |
   = note: the trait bound `main::TestType: Sync` is not satisfied
note: required because of the requirements on the impl of `Sync` for `Outer2<main::TestType>`
  --> $DIR/negated-auto-traits-error.rs:14:22
   |
LL | unsafe impl<T: Send> Sync for Outer2<T> {}
   |                      ^^^^     ^^^^^^^^^
note: required by a bound in `is_sync`
  --> $DIR/negated-auto-traits-error.rs:17:15
   |
LL | fn is_sync<T: Sync>(_: T) {}
   |               ^^^^ required by this bound in `is_sync`
help: consider borrowing here
   |
LL |     is_sync(&Outer2(TestType));
   |             +
LL |     is_sync(&mut Outer2(TestType));
   |             ++++

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0277`.
